--- a/python/01. Digital Audio.ipynb
+++ b/python/01. Digital Audio.ipynb
@@ -16,16 +16,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e665e026",
+   "id": "1c20805e",
    "metadata": {},
    "source": [
-    "# Generate a sine waveform "
+    "# Hello, Sine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "8c444620",
+   "execution_count": 100,
+   "id": "d3b22622",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84a0e969",
+   "id": "4020ab56",
    "metadata": {},
    "source": [
     "# Aliasing\n"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c9fd460",
+   "id": "622c9def",
    "metadata": {},
    "source": [
     "What is the minimum frequency to avoid the aliasing in the harmonic series of the sine tones?"
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "3714ea80",
+   "id": "3635c5d1",
    "metadata": {},
    "outputs": [
     {
