change the variable: sr --> fs

--- a/python/03. Drum Machine.ipynb
+++ b/python/03. Drum Machine.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
     "kick_dur = 0.5\n",
     "freq0 = 150\n",
     "\n",
-    "kick_len = int(kick_dur*sr)\n",
+    "kick_len = int(kick_dur*fs)\n",
     "\n",
     "pitch_env = np.logspace(np.log10(1),np.log10(0.1), kick_len)\n",
     "amp_env = np.logspace(np.log10(1),np.log10(0.001), kick_len)\n",
@@ -294,9 +294,9 @@
     "\n",
     "\n",
     "sr = 44100\n",
-    "x_snare = gen_drum_type2(0.2, 500, sr)\n",
+    "x_snare = gen_drum_type2(0.2, 500, fs)\n",
     "\n",
-    "ipd.Audio(x_snare, rate=sr)\n",
+    "ipd.Audio(x_snare, rate=fs)\n",
     "    "
    ]
   },
@@ -327,7 +327,7 @@
    "source": [
     "x_close_hihat = gen_drum_type2(0.05, 2000, sr)\n",
     "\n",
-    "ipd.Audio(x_close_hihat, rate=sr)\n"
+    "ipd.Audio(x_close_hihat, rate=fs)\n"
    ]
   },
   {
@@ -366,7 +366,7 @@
     "beat_s = [0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1]\n",
     "beat_k = [1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1]\n",
     "      \n",
-    "unit_time = 0.25 # sec\n",
+    "beat_time = 0.25 # sec\n",
     "\n",
     "cur = 0 \n",
     "\n",
@@ -374,7 +374,7 @@
     "snare_len = len(x_snare)\n",
     "hihat_len = len(x_close_hihat)\n",
     "\n",
-    "x_beat = np.zeros(int(unit_time*sr*(len(beat_h)-1))+kick_len)\n",
+    "x_beat = np.zeros(int(beat_time*fs*(len(beat_h)-1))+kick_len)\n",
     "\n",
     "\n",
     "for i in range(len(beat_h)):\n",
@@ -388,9 +388,9 @@
     "    if beat_k[i] == 1:\n",
     "        x_beat[cur:cur+kick_len] = x_beat[cur:cur+kick_len] + x_kick\n",
     "    \n",
-    "    cur = cur + int(unit_time*sr) \n",
+    "    cur = cur + int(beat_time*sr) \n",
     "\n",
-    "ipd.Audio(x_beat, rate=sr)\n"
+    "ipd.Audio(x_beat, rate=fs)\n"
    ]
   }
  ],
